# server/api/swagger/swagger.yaml
@@ -156,7 +156,7 @@ paths:
           description: Container data
           required: true
           schema:
-            $ref: '#/definitions/ContainerModel'
+            $ref: '#/definitions/ContainerCreateModel'
       responses:
         "200":
           description: Success
@@ -459,6 +459,23 @@ definitions:
       image:
         type: object
         $ref: "#/definitions/ImageModel"
+  ContainerCreateModel:
+    required:
+      - name
+      - image
+      - profiles
+    properties:
+      name:
+        type: string
+        minLength: 1
+      profiles:
+        type: array
+        items:
+          $ref: "#/definitions/ProfileModel"
+        minItems: 1
+      image:
+        type: string
+        minLength: 1
   ProfileModel:
     required:
       - name
